--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 <title>Um gesto, uma causa, uma casa!</title>
 <link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<div class="caixa_landing"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
 
 </body>
 </html>
