--- a/video.html
+++ b/video.html
@@ -1,1 +1,1 @@
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8GZfNssxj0M?controls=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
