--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div class="caixa_landing"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
+  
+<a href="/video.html" class="butao">Ver Vídeo</a>
 
 </body>
 </html>
