--- a/video.html
+++ b/video.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Um gesto, uma causa, uma casa!</title>
+<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8GZfNssxj0M?controls=0&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
+</body>
+</html>
