--- a/video.html
+++ b/video.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Um gesto, uma causa, uma casa!</title>
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
