--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <title>Um gesto, uma causa, uma casa!</title>
-<link rel="icon" type="image/x-icon" href="/assets/favicon.png">
+<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="caixa_landing"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
+<div id="caixalanding"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
   
-<a href="video.html" class="butao">Ver Vídeo</a>
+  <button class="botaoamarelo"><a href="video.html">Ver vídeo</a></button>
 
 </body>
 </html>
