--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="caixalanding"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
   
-  <button class="byellow"><a href="video.html">Ver vídeo</a></button>
+  <button><a href="video.html">Ver vídeo</a></button>
 
 </body>
 </html>
