--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="faixa"><img src="assets/logo_branco%402x-8.png"/></div>
 <div id="caixalanding"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
   
   <button class="bamarelo"><a href="video.html">Ver vídeo</a></button>
