--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <title>Um gesto, uma causa, uma casa!</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/x-icon" href="assets/favicon.png">
 <link rel="stylesheet" href="styles.css">
 </head>
