--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Um gesto, uma causa, uma casa!</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" type="image/x-icon" href="assets/favicon.png">
-<link rel="stylesheet" href="styles.css">
+  <title>Um gesto, uma casa, uma causa</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.png">
+  <meta name="viewport" content="width=device-width,initial-scale=1" >
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <div id="topo"><img src="assets/logo_branco%402x-8.png" style="width: 80px;"/></div>
-<div id="caixalanding"><h1>Sabe quantos lares de idosos estão adaptados para surdos em Portugal?</h1></div>
-  
-  <button class="bamarelo"><a href="video.html"><b>Ver vídeo</b></a></button>
+  <div class="top">
+  <img src="https://raw.githubusercontent.com/umacasa/home/main/assets/logo_branco%402x-8.png" class="logo"/>
+  <h1>Sabe <span class="underline--amarelo">quantos</span> lares de idosos estão adaptados para surdos em Portugal?</h1>
+  </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
