--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Um gesto, uma casa, uma causa</title>
+  <title>Um gesto, uma causa, uma casa</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width,initial-scale=1" >
   <link href="style.css" rel="stylesheet">
@@ -10,6 +10,7 @@
   <div class="top">
   <img src="https://raw.githubusercontent.com/umacasa/home/main/assets/logo_branco%402x-8.png" class="logo"/>
   <h1>Sabe <span class="underline--amarelo">quantos</span> lares de idosos estão adaptados para surdos em Portugal?</h1>
+  <img src="https://github.com/umacasa/home/blob/main/assets/GIF-ma%CC%83o-cortado.gif?raw=true" style="width: 30%; display: block; margin-left: auto; margin-right: auto;"/>
   </div>
 
   <script src="script.js"></script>
