--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <div class="top">
-  <img src="https://raw.githubusercontent.com/umacasa/home/main/assets/logo_branco%402x-8.png" class="logo"/>
+  <img src="https://raw.githubusercontent.com/umacasa/home/main/assets/logo_branco%402x-8.png" class="logo"/></div>
+  <div class="frase">
   <h1>Sabe <span class="underline--amarelo">quantos</span> lares de idosos estão adaptados para surdos em Portugal?</h1>
-  <img src="https://github.com/umacasa/home/blob/main/assets/GIF-ma%CC%83o-cortado.gif?raw=true" style="width: 30%; display: block; margin-left: auto; margin-right: auto;"/>
+  <img src="https://github.com/umacasa/home/blob/main/assets/zero.png?raw=true" style="float: right; width: 30%; bottom: 0px;right: 0px;"/>
+  <h3>Ajude-nos a construir o primeiro...</h3>
+    <div class="boxbutoes"><button class="bamarelo"><a href="https://www.gofundme.com/pt-pt" target="_blank">Contribuir</a></button><button class="bamacontorno"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Ver Vídeo</a></button></div>
   </div>
+
+
 
   <script src="script.js"></script>
 </body>
