--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
+  <div id="#full>
   <div class="top">
   <img src="https://raw.githubusercontent.com/umacasa/home/main/assets/logo_branco%402x-8.png" class="logo"/></div>
   <div class="frase">
@@ -14,6 +15,7 @@
   <img src="https://github.com/umacasa/home/blob/main/assets/zero_B.png?raw=true" style="float: right; width: 30%; bottom: 0px;right: 0px;"/>
   <h3>Ajude-nos a construir o primeiro...</h3>
     <div class="boxbutoes"><button class="bamarelo"><a href="https://www.gofundme.com/pt-pt" target="_blank">Contribuir</a></button><button class="bamacontorno"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Ver Vídeo</a></button></div>
+  </div>
   </div>
 
 
